# coding_agent

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml  start_sandboxed.sh  start_sandboxed_template.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: implementing.agent.md  planning.agent.md  research.agent.md  review.agent.md
.github/prompts/: design.prompt.md  implement.prompt.md  plan.prompt.md  planning.prompt.md  review.prompt.md
.pi/prompts/: caveman_mode.md  grill-me.md  implement.md  plan.md  review.md
.pi/skills/langgraph-skill/: SKILL.md
.pi/skills/vscode/: SKILL.md
docs/: lsp_clangd.md
examples/: matrix.py  pet.py  streaming.py  toolbar.py
plans/: LSP_CLIENT_TOOL.md  general_lsp_design.md  general_lsp_plan.md  matrix_adapter.md  ollama_local_agent.md  prompt_and_batch_mode.md  tree_sitter_tool.md
scripts/: create_review_file.py
src/agent/: __init__.py  __main__.py  config.py  discord_bot.py  graph.py  heartbeat_bot.py  nodes.py  prompts.py  state.py  terminal_bot.py  tools.py  tools_cmd.py  tools_filesystem.py  tools_treesitter.py
src/agent/adapters/: __init__.py  batch_adapter.py  discord_adapter.py  heartbeat_adapter.py  matrix_adapter.py  prompt_adapter.py  terminal_adapter.py
src/agent/lsp/: __init__.py  client.py  framing.py  registry.py  types.py
src/agent/router/: __init__.py  agent_service.py  base_adapter.py  messages.py  router.py
src/agent/tools/: __init__.py  general.py  tools.py  tools_clangd.py  tools_cmd.py  tools_filesystem.py  tools_lsp.py  tools_memory.py  tools_notifications.py  tools_treesitter.py
tests/: conftest.py  readwrite.md  test_adapters.py  test_agent.py  test_lsp_client.py  test_lsp_tools.py  test_main.py  test_router.py  testfile.md
tests/fixtures/lsp_cpp/: hello.cpp  hello.h  main.cpp
tests/fixtures/lsp_python/: app.py  broken.py  helpers.py  pyproject.toml
tests/testfiles/: long_file.txt
tests/testfolder/folder1/: test.cpp  test.py
