[project]
name = "agent"
version = "0.1.0"
description = "LangGraph ReAct agent starter project"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.2",
    "python-dotenv>=1.0",
    "typing-extensions>=4.12",
    "discord-py>=2.7.1",
    "matrix-nio[e2e]>=0.21",
    "prompt-toolkit>=3.0.52",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
]

[project.scripts]
agent = "agent.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "langchain-community>=0.3",
    "tavily-python>=0.5",
    "langchain-tavily>=0.2.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
